tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Buttonbar - ID 58/All - ID 40.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20200708 MrW Corrected sort for collections
# 20121101 MrW 

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

Alle Datensätze anzeigen

Wenn [ Hole( Fenstermodus ) = 1 ]
	# Find mode
	
Sonst, wenn [ Hole( Fenstermodus ) ≠ 0 ]
	# Not browse mode
	
Sonst, wenn [ _IsLayoutTableName ( _Syntax::__ID ) ]
	Script ausführen [ Aus Liste ; "Sort Syntax" ]
	
Sonst, wenn [ _IsLayoutTableName ( _Palette::__ID ) ]
	Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️
	
Ende (wenn)
