tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Buttonbar - ID 58/View - ID 39.txt.snap
---
source: src/main.rs
expression: output_content
---
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️
